<resources>
    <string name="app_name">DatosParty</string>
    <string name="hola">Hola</string>
    <string name="_0">0</string>
    <string name="button">Button</string>
    <string name="button_label_count">press it</string>
    <string name="label_text">Hola</string>
    <string name="todo">TODO</string>
    <string name="Tab1">Playing</string>
    <string name="Tab2">Stats</string>
    <string name="Tab3">Leave</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playtext" />
    <string name="Log">Log</string>
    <string name="Dice">DiceView</string>
    <string name="stadistics">Stadistics</string>
    <string name="Label_Name">Name :</string>
    <string name="PlayerName">Name :</string>
    <string name="Stars_Label">Stars :</string>
    <string name="PlayerStars">Stars :</string>
    <string name="CoinsLabel">Coins :</string>
    <string name="PlayerCoins">Coins :</string>
    <string name="PP">TODO</string>


</resources>
